Fix overflow for other screen sizes

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: #e5e5e5;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   font-family: "Poppins", sans-serif;
   color: #172b4d;
   margin: 0;
@@ -38,9 +38,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 114px 16px;
+  padding: 114px 6px;
   position: absolute;
-  width: 100%;
   height: 525px;
   left: calc(35% - 375px / 2);
   top: 92px;
@@ -250,7 +249,7 @@ footer {
 .left {
   display: flex;
   align-items: flex-start;
-  align-content: left;
+  align-content: flex-start;
 }
 
 .test {
@@ -275,13 +274,12 @@ footer {
   list-style: none;
   align-items: center;
 }
-.M-25{
-margin-left: 25px;
 
+.M-25 {
+  margin-left: 25px;
 }
 
 .skill {
-
   color: black;
   margin-left: 30px;
   font-size: 18px;
